[package]
name = "pintu-balance-sync-repro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
eyre = "0.6.8"
futures = "0.3.28"
hex = "0.4.3"
hmac = "0.12.1"
reqwest = { version = "0.11.18", features = ["json"] }
serde = "1.0.183"
serde_json = "1.0.105"
sha2 = "0.10.7"
tokio = { version = "1.32.0", features = ["full"] }
uuid = { version = "1.4.1", features = ["v4"] }
